// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test users query should find a user by handle 1`] = `
Object {
  "data": Object {
    "findUser": Object {
      "ClientError": null,
      "User": Object {
        "handle": "user1",
      },
      "UserNotFound": null,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Test users query should not find a user by handle and throw an error 1`] = `
Object {
  "data": Object {
    "findUser": Object {
      "ClientError": null,
      "User": null,
      "UserNotFound": Object {
        "message": "Couldn't find user with handle hgyujghf8989y89",
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Test users query should query the all the users 1`] = `
Object {
  "data": Object {
    "listCreators": Array [
      Object {
        "ClientError": null,
        "User": Object {
          "handle": "user2",
        },
        "UserNotFound": null,
      },
      Object {
        "ClientError": null,
        "User": Object {
          "handle": "user1",
        },
        "UserNotFound": null,
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
